--- a/Agenda_I4pro/Web.config
+++ b/Agenda_I4pro/Web.config
@@ -59,6 +59,7 @@
   <connectionStrings>
     <add name="DataBase" connectionString="Data Source=DESKTOP-SLTIRLF\MSSQLSERVER01;Initial Catalog=Agenda_I4PRO;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="Agenda_I4PROEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SLTIRLF\MSSQLSERVER01;initial catalog=Agenda_I4PRO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Agenda_I4PROEntities1" connectionString="metadata=res://*/Models.ModelDTOService.csdl|res://*/Models.ModelDTOService.ssdl|res://*/Models.ModelDTOService.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SLTIRLF\MSSQLSERVER01;initial catalog=Agenda_I4PRO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
