--- a/Agenda_I4pro/Agenda_I4pro.csproj
+++ b/Agenda_I4pro/Agenda_I4pro.csproj
@@ -159,7 +159,11 @@
     <Compile Include="Models\BusinessModel\TB_EMAIL.cs" />
     <Compile Include="Models\BusinessModel\TB_TELEFONE.cs" />
     <Compile Include="Models\ModelViewModel\ContatoDetalheViewModel.cs" />
+    <Compile Include="Models\ModelViewModel\ContatoEditarViewModel.cs" />
     <Compile Include="Models\ModelViewModel\ContatoViewModel.cs" />
+    <Compile Include="Models\ModelViewModel\TB_CONTATOVIEWMODEL.cs" />
+    <Compile Include="Models\ModelViewModel\TB_EMAILVIEWMODEL.cs" />
+    <Compile Include="Models\ModelViewModel\TB_TELEFONEVIEWMODEL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceUtil\ValidationUtil.cs" />
   </ItemGroup>
